--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="get">
+      <label for="portfolio">
+        <input type="url" id="portfolio">
+        </label>
+        <br>
+      <label for="name">Name*</label>
+      <input type="text" name="name" id="name" required />
+      <br />
+      <label for="email">Email*</label>
+      <input type="email" name="email" id="email" required />
+      <br />
+      <label for="gender">Gender</label>
+      Male:<input type="radio" name="gender" /> Female:<input
+        type="radio"
+        name="gender"
+      />
+      <br />
+      <label for="laptop brands">Laptop Brands</label>
+      <select id="laptop">
+        <option value="apple">Apple</option>
+        <option value="asus">Asus</option>
+        <option value="hp">HP</option>
+      </select>
+      <br />
+      <label for="age">Age*</label>
+      <input type="number" name="age" id="age" required />
+      <br />
+      <label for="dob">DOB*</label>
+      <input type="date" name="dob" id="dob" required />
+      <br />
+      <label for="password">Password*</label>
+      <input type="password" name="password" id="password" required />
+      <br />
+      <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
