--- a/main.html
+++ b/main.html
@@ -13,33 +13,40 @@
         <input type="url" id="portfolio">
         </label>
         <br>
-      <label for="name">Name*</label>
+      <label for="name">Name*
       <input type="text" name="name" id="name" required />
+		</label>
       <br />
-      <label for="email">Email*</label>
+      <label for="email">Email*
       <input type="email" name="email" id="email" required />
+		  </label>
       <br />
-      <label for="gender">Gender</label>
+      <label for="gender">Gender
       Male:<input type="radio" name="gender" /> Female:<input
         type="radio"
         name="gender"
       />
+	  </label>
       <br />
-      <label for="laptop brands">Laptop Brands</label>
+      <label for="laptop brands">Laptop Brands
       <select id="laptop">
         <option value="apple">Apple</option>
         <option value="asus">Asus</option>
         <option value="hp">HP</option>
       </select>
+		  </label>
       <br />
-      <label for="age">Age*</label>
+      <label for="age">Age*
       <input type="number" name="age" id="age" required />
+		  </label>
       <br />
-      <label for="dob">DOB*</label>
+      <label for="dob">DOB*
       <input type="date" name="dob" id="dob" required />
+		  </label>
       <br />
-      <label for="password">Password*</label>
+      <label for="password">Password*
       <input type="password" name="password" id="password" required />
+		  </label>
       <br />
       <button type="submit">Submit</button>
     </form>
