--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method="get">
+	<form method='POST'>
       <label for="portfolio">
         <input type="url" id="portfolio">
         </label>
