--- a/main.html
+++ b/main.html
@@ -14,40 +14,38 @@
         </label>
         <br>
       <label for="name">Name*
-      <input type="text" name="name" id="name" required />
+      <input type="text" name="name" id="name" required>
 		</label>
-      <br />
+      <br>
       <label for="email">Email*
-      <input type="email" name="email" id="email" required />
-		  </label>
-      <br />
-      <label for="gender">Gender
-      Male:<input type="radio" name="gender" /> Female:<input
-        type="radio"
-        name="gender"
-      />
+      <input type="email" name="email" id="email" required>
 	  </label>
-      <br />
+      <br>
+      <label for="gender">Gender
+      Male:<input type="radio" name="gender"> 
+	  Female:<input type="radio" name="gender">
+	  </label>
+      <br>
       <label for="laptop brands">Laptop Brands
       <select id="laptop">
         <option value="apple">Apple</option>
         <option value="asus">Asus</option>
         <option value="hp">HP</option>
       </select>
-		  </label>
-      <br />
+	  </label>
+      <br>
       <label for="age">Age*
-      <input type="number" name="age" id="age" required />
-		  </label>
-      <br />
+      <input type="number" name="age" id="age" required>
+	 </label>
+      <br>
       <label for="dob">DOB*
-      <input type="date" name="dob" id="dob" required />
-		  </label>
-      <br />
+      <input type="date" name="dob" id="dob" required>
+	 </label>
+      <br>
       <label for="password">Password*
-      <input type="password" name="password" id="password" required />
-		  </label>
-      <br />
+      <input type="password" name="password" id="password" required>
+	 </label>
+      <br>
       <button type="submit">Submit</button>
     </form>
     <script type="text/javascript" src="./script.js">
