--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 	  </label>
       <br>
       <label for="laptop brands">Laptop Brands
-      <select id="laptop">
+      <select id="laptop brands">
         <option value="apple">Apple</option>
         <option value="asus">Asus</option>
         <option value="hp">HP</option>
