--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
 	  </label>
       <br>
       <label for="gender">Gender
-      Male:<input type="radio" name="gender"> 
-	  Female:<input type="radio" name="gender">
+      Male:<input type="radio" name="gender" required> 
+	  Female:<input type="radio" name="gender" required>
 	  </label>
       <br>
       <label for="laptop brands">Laptop Brands
