--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 	  Female:<input type="radio" name="gender" required>
 	  </label>
       <br>
-      <label for="laptop brands">Laptop Brands
-      <select id="laptop brands">
+      <label for="laptop">Laptop Brands
+      <select id="laptop">
         <option value="apple">Apple</option>
         <option value="asus">Asus</option>
         <option value="hp">HP</option>
